{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 63,
  "lineage": "46ffa190-1fa9-d8a9-4d96-f252ee768afd",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-010502f62836f0c67",
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:instance/i-039e4fe2059d8b1ed",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-039e4fe2059d8b1ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-ed25519-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ff81c489837b5edd"
              }
            ],
            "primary_network_interface_id": "eni-0ff81c489837b5edd",
            "private_dns": "ip-10-2-0-61.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.61",
            "public_ip": "15.164.227.229",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b9158663b81c91b2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-02a35bec8b2fe1b1a",
              "sg-02f43d573e9986fb3",
              "sg-034bc390bb6375bf3",
              "sg-0d9451e6fc29dcf14"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0da518d72c1aeb233",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02a35bec8b2fe1b1a",
              "sg-02f43d573e9986fb3",
              "sg-034bc390bb6375bf3",
              "sg-0d9451e6fc29dcf14"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "i-039e4fe2059d8b1ed",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.keypair.aws_key_pair.ssh_public_key",
            "module.keypair.tls_private_key.ssh_public_key",
            "module.sg.aws_security_group.sg_map",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cache",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:security-group/sg-0525cb881f3be53a8",
            "description": "Cache Server - Only company",
            "egress": [],
            "id": "sg-0525cb881f3be53a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "fw-cache",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-cache"
            },
            "tags_all": {
              "Name": "fw-cache"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f6b418458d2b1a6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-0525cb881f3be53a8",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "db",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:security-group/sg-090b7b88aa48cb428",
            "description": "DataBase Server - Only company",
            "egress": [],
            "id": "sg-090b7b88aa48cb428",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "fw-db",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-db"
            },
            "tags_all": {
              "Name": "fw-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f6b418458d2b1a6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-090b7b88aa48cb428",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "icmp",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:security-group/sg-0d9451e6fc29dcf14",
            "description": "ICMP Echo Requests",
            "egress": [],
            "id": "sg-0d9451e6fc29dcf14",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "fw-icmp",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-icmp"
            },
            "tags_all": {
              "Name": "fw-icmp"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f6b418458d2b1a6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-0d9451e6fc29dcf14",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "out",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:security-group/sg-034bc390bb6375bf3",
            "description": "Outbound Traffics - all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-034bc390bb6375bf3",
            "ingress": [],
            "name": "fw-out",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-out"
            },
            "tags_all": {
              "Name": "fw-out"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f6b418458d2b1a6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-034bc390bb6375bf3",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "remote",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:security-group/sg-02a35bec8b2fe1b1a",
            "description": "remote access - only company",
            "egress": [],
            "id": "sg-02a35bec8b2fe1b1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "183.98.32.210/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "fw-remote",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-remote"
            },
            "tags_all": {
              "Name": "fw-remote"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f6b418458d2b1a6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-02a35bec8b2fe1b1a",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "web",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:security-group/sg-02f43d573e9986fb3",
            "description": "Web Traffics - AnyWhere",
            "egress": [],
            "id": "sg-02f43d573e9986fb3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fw-web",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-web"
            },
            "tags_all": {
              "Name": "fw-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f6b418458d2b1a6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-02f43d573e9986fb3",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:internet-gateway/igw-0b97f3fe5c14cee3a",
            "id": "igw-0b97f3fe5c14cee3a",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-igw-main"
            },
            "tags_all": {
              "Name": "seoul-igw-main"
            },
            "vpc_id": "vpc-00f6b418458d2b1a6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "igw-0b97f3fe5c14cee3a",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:route-table/rtb-08f2cf132202b68a1",
            "id": "rtb-08f2cf132202b68a1",
            "owner_id": "511874874257",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b97f3fe5c14cee3a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "seoul-route-public"
            },
            "tags_all": {
              "Name": "seoul-route-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f6b418458d2b1a6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtb-08f2cf132202b68a1",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "without_nat_privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:route-table/rtb-09519969da2ddc7b7",
            "id": "rtb-09519969da2ddc7b7",
            "owner_id": "511874874257",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "seoul-route-private-1"
            },
            "tags_all": {
              "Name": "seoul-route-private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f6b418458d2b1a6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtb-09519969da2ddc7b7",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:route-table/rtb-088b3214d466bcb51",
            "id": "rtb-088b3214d466bcb51",
            "owner_id": "511874874257",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "seoul-route-private-2"
            },
            "tags_all": {
              "Name": "seoul-route-private-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f6b418458d2b1a6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtb-088b3214d466bcb51",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc99491b3060fb0e",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-09519969da2ddc7b7",
            "subnet_id": "subnet-021c151bfbb8bbd49"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-0cc99491b3060fb0e",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_ips",
            "module.vpc.aws_nat_gateway.private_nat_gws",
            "module.vpc.aws_route_table.with_nat_privates",
            "module.vpc.aws_route_table.without_nat_privates",
            "module.vpc.aws_subnet.privates",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083a9968520ddfd94",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-088b3214d466bcb51",
            "subnet_id": "subnet-0229651b629e18648"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-083a9968520ddfd94",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_ips",
            "module.vpc.aws_nat_gateway.private_nat_gws",
            "module.vpc.aws_route_table.with_nat_privates",
            "module.vpc.aws_route_table.without_nat_privates",
            "module.vpc.aws_subnet.privates",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053f0c8c128906bd7",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-08f2cf132202b68a1",
            "subnet_id": "subnet-0da518d72c1aeb233"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-053f0c8c128906bd7",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0913b14f78ae46143",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-08f2cf132202b68a1",
            "subnet_id": "subnet-0bd2f755b1f7b16c8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-0913b14f78ae46143",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:subnet/subnet-021c151bfbb8bbd49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021c151bfbb8bbd49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-subnet-private-1"
            },
            "tags_all": {
              "Name": "seoul-subnet-private-1"
            },
            "vpc_id": "vpc-00f6b418458d2b1a6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-021c151bfbb8bbd49",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:subnet/subnet-0229651b629e18648",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.2.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0229651b629e18648",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-subnet-private-2"
            },
            "tags_all": {
              "Name": "seoul-subnet-private-2"
            },
            "vpc_id": "vpc-00f6b418458d2b1a6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-0229651b629e18648",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:subnet/subnet-0da518d72c1aeb233",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da518d72c1aeb233",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-subnet-public-1"
            },
            "tags_all": {
              "Name": "seoul-subnet-public-1"
            },
            "vpc_id": "vpc-00f6b418458d2b1a6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-0da518d72c1aeb233",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:subnet/subnet-0bd2f755b1f7b16c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd2f755b1f7b16c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-subnet-public-2"
            },
            "tags_all": {
              "Name": "seoul-subnet-public-2"
            },
            "vpc_id": "vpc-00f6b418458d2b1a6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-0bd2f755b1f7b16c8",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:vpc/vpc-00f6b418458d2b1a6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-05034e08940e16827",
            "default_route_table_id": "rtb-0200a240910b998c3",
            "default_security_group_id": "sg-0528ef5140c8f41bc",
            "dhcp_options_id": "dopt-08f1e1c8c978b36fd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00f6b418458d2b1a6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0200a240910b998c3",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-vpc-main"
            },
            "tags_all": {
              "Name": "seoul-vpc-main"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "vpc-00f6b418458d2b1a6",
            "region": "ap-northeast-2"
          }
        }
      ]
    }
  ]
}